Transformar Semana 2 a formato 3 sesiones preparatoria
- Adaptar estructuras-control.ipynb para nivel preparatoria
- Implementar estructura de 3 sesiones de 50 minutos cada una
- Sesión 1: Estructuras de datos (listas y diccionarios) con contexto futbolístico
- Sesión 2: Estructuras de control (if, elif, else) con decisiones de entrenador
- Mantener metodología socrática y ejemplos prácticos
- Aplicar política sin emojis consistentemente
- Incluir actividades hands-on para cada concepto

--- a/contenido/bloque-1/semana-2/estructuras-control.ipynb
+++ b/contenido/bloque-1/semana-2/estructuras-control.ipynb
@@ -5,17 +5,40 @@
    "id": "636ca727",
    "metadata": {},
    "source": [
-    "# Semana 2: Estructuras de Datos y Control de Flujo\n",
+    "# Semana 2: Estructuras de Datos y Control de Flujo para Análisis Deportivo\n",
     "\n",
-    "## Prerrequisitos de Programación con Python\n",
+    "## Listas, Diccionarios y Decisiones con Datos de Fútbol\n",
+    "\n",
+    "### **Estructura de la Semana (3 sesiones de 50 minutos)**\n",
     "\n",
     "---\n",
     "\n",
-    "**Objetivos de aprendizaje:**\n",
-    "- Comprender y utilizar estructuras de datos: listas, diccionarios, tuplas y conjuntos\n",
-    "- Implementar control de flujo con bucles (for, while) y condicionales (if, elif, else)\n",
-    "- Manipular datos estructurados simples aplicados al deporte\n",
-    "- Procesar múltiples datos de manera eficiente\n",
+    "### **Sesión 1: Estructuras de Datos - Organizando Información de Equipos**\n",
+    "**Duración:** 50 minutos\n",
+    "- Listas: alineaciones y secuencias de eventos\n",
+    "- Diccionarios: perfiles completos de jugadores\n",
+    "- Tuplas y conjuntos: datos inmutables y únicos\n",
+    "\n",
+    "### **Sesión 2: Control de Flujo - Decisiones y Repeticiones**  \n",
+    "**Duración:** 50 minutos\n",
+    "- Condicionales: if, elif, else con estadísticas\n",
+    "- Bucles for: procesando múltiples partidos\n",
+    "- Bucles while: simulaciones y contadores\n",
+    "\n",
+    "### **Sesión 3: Integración Práctica - Análisis Completo de Temporada**\n",
+    "**Duración:** 50 minutos\n",
+    "- Combinando estructuras de datos\n",
+    "- Procesamiento de múltiples partidos\n",
+    "- Análisis estadístico básico de equipos\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Objetivos de Aprendizaje de la Semana:**\n",
+    "Al finalizar esta semana, podrás:\n",
+    "- Organizar información compleja usando listas y diccionarios\n",
+    "- Tomar decisiones automáticas con condicionales\n",
+    "- Procesar múltiples datos usando bucles\n",
+    "- Crear análisis básicos de equipos y temporadas\n",
     "\n",
     "---"
    ]
@@ -25,7 +48,12 @@
    "id": "b821b890",
    "metadata": {},
    "source": [
-    "## 1. Descubriendo las Estructuras de Datos: ¿Cómo organizamos información compleja?\n",
+    "# SESIÓN 1: Estructuras de Datos - Organizando Información de Equipos\n",
+    "**Tiempo:** 50 minutos | **Nivel:** Preparatoria\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Descubriendo las Estructuras de Datos\n",
     "\n",
     "### Pregunta fundamental: ¿Cómo almacenarías información de un equipo completo?\n",
     "\n",
@@ -33,7 +61,9 @@
     "\n",
     "**Analogía para pensar**: Imagina que eres el manager de un equipo. ¿Cómo organizarías físicamente toda la información que necesitas manejar?\n",
     "\n",
-    "### Explorando las opciones: ¿Qué herramientas de organización necesitamos?\n",
+    "---\n",
+    "\n",
+    "## Explorando las Opciones de Organización\n",
     "\n",
     "Python nos ofrece cuatro \"sistemas de organización\" principales. ¿Puedes imaginar para qué serviría cada uno?\n",
     "\n",
@@ -54,44 +84,9 @@
     "- ¿Secuencia de goles en un partido?\n",
     "- ¿Resultados de múltiples partidos?\n",
     "\n",
-    "### Pregunta guía 2: ¿Cómo almacenarías información detallada de un jugador?\n",
+    "---\n",
     "\n",
-    "**Situación**: Necesitas guardar nombre, edad, posición, goles, etc. de cada jugador.\n",
-    "\n",
-    "**¿Qué tipo de organización necesitas?**\n",
-    "- ¿Sería útil tener \"etiquetas\" para cada dato?\n",
-    "- ¿Prefieres buscar por \"nombre\" en lugar de por posición en una lista?\n",
-    "- ¿Cada \"etiqueta\" debería ser única?\n",
-    "\n",
-    "**Descubrimiento**: Esto es un **Diccionario** - datos en pares **clave-valor**\n",
-    "\n",
-    "**Reflexión**: ¿Cómo sería más fácil encontrar la edad de Messi: en una lista de 100 números o preguntando directamente por \"edad de Messi\"?\n",
-    "\n",
-    "### Pregunta guía 3: ¿Cómo guardarías información que nunca cambia?\n",
-    "\n",
-    "**Situación**: El resultado final de un partido ya jugado, las coordenadas de un gol.\n",
-    "\n",
-    "**¿Qué características necesita este almacenamiento?**\n",
-    "- ¿Debería poder modificarse después del partido?\n",
-    "- ¿Importa el orden? (¿2-1 es diferente de 1-2?)\n",
-    "- ¿Necesitas acceso por posición?\n",
-    "\n",
-    "**Descubrimiento**: Esto es una **Tupla** - **ordenada** e **inmutable**\n",
-    "\n",
-    "**Aplicación práctica**: ¿Por qué sería peligroso que alguien pudiera cambiar accidentalmente el resultado de un partido ya jugado?\n",
-    "\n",
-    "### Pregunta guía 4: ¿Cómo manejarías elementos únicos sin duplicados?\n",
-    "\n",
-    "**Situación**: Lista de equipos únicos en una liga, jugadores que han marcado al menos un gol.\n",
-    "\n",
-    "**¿Qué necesitas?**\n",
-    "- ¿Te importa el orden de los equipos?\n",
-    "- ¿Puede un equipo aparecer dos veces en la misma liga?\n",
-    "- ¿Qué operación es más importante: agregar equipos o verificar si un equipo ya existe?\n",
-    "\n",
-    "**Descubrimiento**: Esto es un **Conjunto** - elementos **únicos** sin orden específico\n",
-    "\n",
-    "**Pregunta de conexión**: ¿En qué se parece esto a los equipos de una liga real? ¿Puede haber dos \"Barcelona\" en La Liga?"
+    "## Listas: Tu Primera Estructura de Datos"
    ]
   },
   {
@@ -99,15 +94,11 @@
    "id": "127b65b0",
    "metadata": {},
    "source": [
-    "## 2. Experimentando con nuestras herramientas: ¿Cómo funcionan en la práctica?\n",
+    "### Creando tu primera alineación\n",
     "\n",
-    "### ¿Listos para probar nuestras hipótesis?\n",
+    "**¿Cómo crearías la alineación titular del Barcelona?**\n",
     "\n",
-    "**Pregunta de transición**: Ahora que hemos pensado en qué tipo de organización necesitamos para diferentes situaciones, ¿qué tal si las ponemos a prueba?\n",
-    "\n",
-    "### 2.1 Listas - ¿Cómo manejamos secuencias de información?\n",
-    "\n",
-    "**Desafío de predicción**: Antes de ejecutar el código, ¿puedes predecir qué pasará cuando creemos una lista de jugadores?"
+    "Una lista se crea usando corchetes [ ] y separando elementos con comas:"
    ]
   },
   {
@@ -135,31 +126,203 @@
     }
    ],
    "source": [
-    "# ¿Qué tipo de información deportiva podrías organizar en listas?\n",
-    "# Vamos a crear algunas y ver qué podemos hacer con ellas\n",
+    "# Creando una lista con la alineación del Barcelona\n",
+    "alineacion_barcelona = [\"Ter Stegen\", \"Cancelo\", \"Araujo\", \"Christensen\", \"Balde\", \n",
+    "                        \"De Jong\", \"Gavi\", \"Pedri\", \"Yamal\", \"Lewandowski\", \"Raphinha\"]\n",
     "\n",
-    "jugadores = [\"Messi\", \"Ronaldo\", \"Neymar\", \"Mbappé\", \"Haaland\"]\n",
-    "goles_por_partido = [2, 1, 0, 3, 1, 2]\n",
-    "equipos_champions = [\"Real Madrid\", \"Barcelona\", \"Manchester City\", \"Bayern Munich\"]\n",
+    "print(\"Alineación del FC Barcelona:\")\n",
+    "print(alineacion_barcelona)\n",
+    "print()\n",
+    "print(\"Número de jugadores:\", len(alineacion_barcelona))\n",
+    "print(\"Portero (primera posición):\", alineacion_barcelona[0])\n",
+    "print(\"Delantero centro:\", alineacion_barcelona[9])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2cb7f92",
+   "metadata": {},
+   "source": [
+    "### Actividad Práctica: Tu Equipo Ideal\n",
     "\n",
-    "print(\"Lista de jugadores:\", jugadores)\n",
-    "print(\"Goles por partido:\", goles_por_partido)\n",
-    "print(\"Equipos Champions:\", equipos_champions)\n",
+    "Pregunta clave: **¿Cómo organizarías tu equipo ideal?**\n",
+    "\n",
+    "**Tiempo estimado: 8 minutos**\n",
+    "\n",
+    "Reflexiona mientras creamos tu lista:\n",
+    "- ¿Qué jugadores incluirías en tu equipo favorito?\n",
+    "- ¿En qué orden los colocarías según su importancia?\n",
+    "- ¿Cómo accederías rápidamente a información específica de cada jugador?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "037bbb36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Actividad: Crea tu equipo ideal (completa el código)\n",
+    "mi_equipo_ideal = [\"Tu portero favorito\", \"defensa_1\", \"defensa_2\", \"defensa_3\", \n",
+    "                   \"mediocampista_1\", \"mediocampista_2\", \"mediocampista_3\",\n",
+    "                   \"delantero_1\", \"delantero_2\", \"delantero_3\", \"delantero_4\"]\n",
+    "\n",
+    "# Sustituye los nombres por tus jugadores favoritos\n",
+    "print(\"Mi equipo ideal:\")\n",
+    "print(mi_equipo_ideal)\n",
+    "\n",
+    "# Practica acceder a posiciones específicas\n",
+    "print(\"Mi portero:\", mi_equipo_ideal[0])\n",
+    "print(\"Mi capitán (mediocampista):\", mi_equipo_ideal[4])\n",
+    "print(\"Total de jugadores:\", len(mi_equipo_ideal))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04a88691",
+   "metadata": {},
+   "source": [
+    "## Diccionarios: Fichas Completas de Jugadores\n",
+    "\n",
+    "Las listas nos permiten organizar nombres, pero **¿qué pasa cuando necesitamos más información de cada jugador?**\n",
+    "\n",
+    "En el fútbol, cada jugador tiene múltiples características:\n",
+    "- Nombre\n",
+    "- Posición\n",
+    "- Edad\n",
+    "- Equipo\n",
+    "- Goles anotados\n",
+    "\n",
+    "Los **diccionarios** nos permiten organizar esta información compleja de manera eficiente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ced182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creando una ficha completa de jugador con diccionario\n",
+    "ficha_messi = {\n",
+    "    \"nombre\": \"Lionel Messi\",\n",
+    "    \"posicion\": \"Delantero\",\n",
+    "    \"edad\": 36,\n",
+    "    \"equipo\": \"Inter Miami\",\n",
+    "    \"goles_temporada\": 11,\n",
+    "    \"pais\": \"Argentina\"\n",
+    "}\n",
+    "\n",
+    "print(\"=== FICHA DE JUGADOR ===\")\n",
+    "print(\"Nombre:\", ficha_messi[\"nombre\"])\n",
+    "print(\"Posición:\", ficha_messi[\"posicion\"])\n",
+    "print(\"Edad:\", ficha_messi[\"edad\"])\n",
+    "print(\"Equipo actual:\", ficha_messi[\"equipo\"])\n",
+    "print(\"Goles esta temporada:\", ficha_messi[\"goles_temporada\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a24c87",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Resumen de la Sesión 1 (50 minutos)\n",
+    "\n",
+    "**¿Qué hemos aprendido sobre organización de datos futbolísticos?**\n",
+    "\n",
+    "### Conceptos Clave:\n",
+    "- **Listas**: Para organizar secuencias de elementos (alineaciones, equipos)\n",
+    "- **Diccionarios**: Para almacenar información completa y estructurada\n",
+    "- **Acceso a datos**: Usando índices y claves para obtener información específica\n",
+    "\n",
+    "### Aplicación Futbolística:\n",
+    "- Creación de alineaciones usando listas\n",
+    "- Fichas completas de jugadores con diccionarios\n",
+    "- Organización eficiente de datos deportivos\n",
+    "\n",
+    "**Pregunta para reflexionar**: ¿Cómo podrías usar estas estructuras para organizar toda la información de tu equipo favorito?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Próxima sesión**: Aprenderemos a tomar decisiones automáticas basadas en estos datos usando estructuras de control."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d60fca57",
+   "metadata": {},
+   "source": [
+    "# Sesión 2: Estructuras de Control y Decisiones Futbolísticas\n",
+    "**(50 minutos)**\n",
+    "\n",
+    "## Objetivo de la Sesión\n",
+    "Aprender a crear programas que tomen decisiones automáticas basadas en datos futbolísticos.\n",
+    "\n",
+    "### Pregunta Central\n",
+    "**¿Cómo puede un programa tomar decisiones como un entrenador?**\n",
+    "\n",
+    "En el fútbol, los entrenadores constantemente toman decisiones:\n",
+    "- ¿Este jugador está en forma para jugar?\n",
+    "- ¿Debemos cambiar la formación según el marcador?\n",
+    "- ¿Qué jugador debería tomar el penalty?\n",
+    "\n",
+    "Hoy aprenderemos a programar estas decisiones usando **estructuras de control**.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ba7ad1",
+   "metadata": {},
+   "source": [
+    "## Estructuras Condicionales: If, Elif, Else\n",
+    "\n",
+    "**Pregunta reflexiva**: ¿Cómo decides si un jugador debe ser titular o suplente?\n",
+    "\n",
+    "Los entrenadores evalúan múltiples condiciones:\n",
+    "- Si el jugador está lesionado → No juega\n",
+    "- Si tiene tarjetas amarillas → Evaluar riesgo  \n",
+    "- Si está en buena forma → Es titular\n",
+    "- En caso contrario → Va al banquillo\n",
+    "\n",
+    "En programación usamos **if, elif, else** para estas decisiones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5df02ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sistema de decisión para alineación\n",
+    "jugador_nombre = \"Pedri\"\n",
+    "forma_fisica = 85  # Escala de 0 a 100\n",
+    "tarjetas_amarillas = 1\n",
+    "lesionado = False\n",
+    "\n",
+    "print(f\"Evaluando a {jugador_nombre}:\")\n",
+    "print(f\"Forma física: {forma_fisica}/100\")\n",
+    "print(f\"Tarjetas amarillas: {tarjetas_amarillas}\")\n",
+    "print(f\"¿Lesionado?: {lesionado}\")\n",
     "print()\n",
     "\n",
-    "# ¿Cómo crees que accedemos a elementos específicos?\n",
-    "# ¿Qué significa el número 0 en programación?\n",
-    "print(f\"Primer jugador: {jugadores[0]}\")\n",
-    "print(f\"Último jugador: {jugadores[-1]}\")  # ¿Qué hace el -1?\n",
-    "print(f\"Goles en el tercer partido: {goles_por_partido[2]}\")  # ¿Por qué 2 y no 3?\n",
-    "print()\n",
+    "# Decisión del entrenador automatizada\n",
+    "if lesionado:\n",
+    "    decision = \"No convocado - Lesionado\"\n",
+    "elif tarjetas_amarillas >= 2:\n",
+    "    decision = \"Suplente - Riesgo de suspensión\"\n",
+    "elif forma_fisica >= 80:\n",
+    "    decision = \"Titular - Excelente forma\"\n",
+    "elif forma_fisica >= 60:\n",
+    "    decision = \"Suplente - Forma aceptable\"\n",
+    "else:\n",
+    "    decision = \"No convocado - Baja forma\"\n",
     "\n",
-    "# ¿Qué operaciones matemáticas podríamos hacer con estas listas?\n",
-    "print(f\"Total de jugadores: {len(jugadores)}\")\n",
-    "print(f\"Total de goles: {sum(goles_por_partido)}\")\n",
-    "print(f\"Promedio de goles: {sum(goles_por_partido)/len(goles_por_partido):.2f}\")\n",
-    "\n",
-    "# Pregunta de análisis: ¿Qué te dice este promedio sobre el rendimiento ofensivo?"
+    "print(f\"DECISIÓN: {decision}\")"
    ]
   },
   {
