Transformar Semana 5: aplicar metodología socrática y eliminar emojis
- Restructurar contenido en 3 sesiones de 50 minutos exactas
- Aplicar metodología socrática: Pregunta → Reflexión → Descubrimiento → Código
- Eliminar emojis de dashboard y evaluaciones para mantener contenido profesional
- Transformar introducción con preguntas que generan curiosidad sobre visualización
- Integrar análisis de matplotlib con ejemplos futbolísticos realistas
- Mantener nivel apropiado para estudiantes de preparatoria sin experiencia previa
- Usar datos deportivos auténticos y equipos reconocibles

--- a/contenido/bloque-1/semana-5/visualizacion-basica.ipynb
+++ b/contenido/bloque-1/semana-5/visualizacion-basica.ipynb
@@ -5,30 +5,30 @@
    "id": "876979d4",
    "metadata": {},
    "source": [
-    "# Semana 5: Visualización Básica - De Números a Historias Visuales\n",
-    "## Comunicando Datos Futbolísticos como los Profesionales\n",
+    "# Semana 5: ¿Cómo convierten los datos en historias visuales los medios deportivos?\n",
     "\n",
-    "### Estructura del Aprendizaje (3 sesiones de 50 minutos)\n",
+    "## SESIÓN 1: ¿Por qué una imagen vale más que mil números? (50 min)\n",
+    "**Pregunta guía**: ¿Qué es más impactante: una tabla con estadísticas o un gráfico que muestra tendencias?\n",
     "\n",
-    "**Sesión 1**: Gráficos básicos con matplotlib - Barras, líneas y dispersión\n",
-    "**Sesión 2**: Visualizaciones avanzadas - Múltiples series y personalización  \n",
-    "**Sesión 3**: Dashboard deportivo - Panel de control visual completo\n",
+    "## SESIÓN 2: ¿Cómo crean visualizaciones profesionales como ESPN? (50 min)  \n",
+    "**Pregunta guía**: ¿Qué elementos hacen que una visualización sea profesional e impactante?\n",
+    "\n",
+    "## SESIÓN 3: ¿Cómo integras múltiples gráficos en un dashboard ejecutivo? (50 min)\n",
+    "**Pregunta guía**: ¿Cómo crearías un panel de control que comunique insights complejos instantáneamente?\n",
     "\n",
     "---\n",
     "\n",
-    "### Objetivos Generales\n",
-    "Al finalizar esta semana, podrás:\n",
-    "- Crear gráficos profesionales que comuniquen datos futbolísticos efectivamente\n",
-    "- Elegir el tipo de visualización apropiado para cada análisis\n",
-    "- Personalizar gráficos con colores, etiquetas y estilos profesionales\n",
-    "- Construir dashboards visuales que cuenten historias deportivas\n",
-    "\n",
     "### Pregunta Central de la Semana\n",
-    "**¿Por qué una imagen vale más que mil números en el análisis deportivo?**\n",
+    "**¿Te has preguntado por qué los comentaristas deportivos usan gráficos en lugar de solo mencionar números durante las transmisiones?**\n",
     "\n",
-    "**Reflexión inicial**: ¿Qué es más impactante?\n",
-    "- \"Barcelona: 68 puntos, Real Madrid: 65 puntos\"\n",
-    "- Un gráfico visual que muestra la diferencia\n",
+    "### Tu descubrimiento esta semana\n",
+    "Vas a aprender por qué la visualización de datos es fundamental en el análisis deportivo:\n",
+    "- **Comunicación instantánea**: El cerebro procesa imágenes 60,000 veces más rápido que texto\n",
+    "- **Identificación de patrones**: Tendencias invisibles en números se vuelven obvias\n",
+    "- **Impacto profesional**: Tus análisis rivalizarán con medios deportivos profesionales\n",
+    "\n",
+    "### Conexión con tu experiencia\n",
+    "¿Recuerdas algún gráfico deportivo que te haya impactado en TV? ¿Qué lo hacía especial?\n",
     "\n",
     "---"
    ]
@@ -38,34 +38,35 @@
    "id": "db3447ff",
    "metadata": {},
    "source": [
-    "# Sesión 1: Gráficos Básicos - El Lenguaje Visual del Fútbol\n",
+    "# SESIÓN 1: ¿Por qué necesitas comunicar visualmente en lugar de solo con números?\n",
     "**(50 minutos)**\n",
     "\n",
-    "## Objetivo de la Sesión\n",
-    "Aprender a crear visualizaciones básicas que transformen datos futbolísticos en comunicación visual efectiva.\n",
+    "## Pregunta Central de la Sesión\n",
+    "**¿Te has preguntado por qué los analistas deportivos en TV usan gráficos en lugar de solo leer estadísticas?**\n",
     "\n",
-    "### Pregunta Central\n",
-    "**¿Cómo convertimos tablas de números en insights visuales instantáneos?**\n",
+    "### Tu situación actual\n",
+    "Imagina que debes explicar el rendimiento goleador de 5 jugadores a un entrenador que tiene solo 30 segundos para entender la información.\n",
     "\n",
-    "**Situación real**: Imagina que debes presentar el rendimiento goleador de 5 jugadores a un entrenador que tiene solo 30 segundos para entender la información.\n",
+    "### Reflexión inicial\n",
+    "¿Qué funcionaría mejor?\n",
+    "- **Opción A**: \"Messi tiene 25 goles, Benzema 20, Lewandowski 22, Griezmann 15, Morata 13\"\n",
+    "- **Opción B**: Un gráfico de barras que muestre visualmente las diferencias\n",
     "\n",
-    "**¿Qué funcionaría mejor?**\n",
-    "- Tabla con números: \"Messi: 25, Benzema: 20, Lewandowski: 22...\"\n",
-    "- Gráfico de barras visual que muestre las diferencias instantáneamente\n",
+    "### Analogía deportiva\n",
+    "**Piensa en esto**: ¿Por qué crees que los marcadores en TV muestran barras de progreso en lugar de solo números cuando comparan estadísticas?\n",
     "\n",
-    "### ¿Por qué Visualizar Datos?\n",
-    "\n",
-    "**Ventajas de la comunicación visual**:\n",
-    "- **Comprensión instantánea**: El cerebro procesa imágenes 60,000 veces más rápido que texto\n",
-    "- **Identificación de patrones**: Tendencias invisibles en números se vuelven obvias\n",
-    "- **Impacto emocional**: Los gráficos generan reacciones más fuertes\n",
-    "- **Comunicación universal**: Trascienden barreras de idioma y nivel técnico\n",
+    "### Tu descubrimiento fundamental\n",
+    "El cerebro humano procesa información visual 60,000 veces más rápido que texto. Por eso los medios deportivos profesionales nunca presentan solo números.\n",
     "\n",
     "---\n",
     "\n",
-    "## Matplotlib: Nuestra Herramienta Profesional\n",
+    "## Descubriendo Matplotlib: Tu herramienta profesional\n",
     "\n",
-    "**Matplotlib** es la librería estándar para crear gráficos en Python, usada por científicos de datos en todo el mundo."
+    "### ¿Qué es Matplotlib?\n",
+    "La librería estándar que usan científicos de datos en todo el mundo para crear visualizaciones profesionales.\n",
+    "\n",
+    "### Primera pregunta práctica\n",
+    "¿Cómo crees que se vería la diferencia entre comunicar datos con números versus con gráficos profesionales?"
    ]
   },
   {
@@ -573,7 +574,7 @@
    "id": "36a3a233",
    "metadata": {},
    "source": [
-    "# 📊 SESIÓN 3: DASHBOARDS Y PRESENTACIÓN PROFESIONAL\n",
+    "# SESIÓN 3: DASHBOARDS Y PRESENTACIÓN PROFESIONAL\n",
     "**Duración**: 50 minutos | **Objetivo**: Crear sistemas completos de visualización\n",
     "\n",
     "## ¿Por qué los Dashboards son Importantes?\n",
@@ -866,13 +867,13 @@
     "estadisticas_clave = [\n",
     "    ['Métrica', 'Valor Actual', 'Objetivo', 'Estado'],\n",
     "    ['Puntos por Partido', f'{puntos_acumulados[-1]/len(jornadas):.2f}', '2.00', \n",
-    "     '✅' if puntos_acumulados[-1]/len(jornadas) >= 2.0 else '⚠️'],\n",
+    "     'APROBADO' if puntos_acumulados[-1]/len(jornadas) >= 2.0 else 'MEJORAR'],\n",
     "    ['Goles por Partido', f'{goles_favor[-1]/len(jornadas):.2f}', '2.50', \n",
-    "     '✅' if goles_favor[-1]/len(jornadas) >= 2.5 else '⚠️'],\n",
+    "     'APROBADO' if goles_favor[-1]/len(jornadas) >= 2.5 else 'MEJORAR'],\n",
     "    ['Defensa (Goles/Partido)', f'{goles_contra[-1]/len(jornadas):.2f}', '< 1.00', \n",
-    "     '✅' if goles_contra[-1]/len(jornadas) < 1.0 else '⚠️'],\n",
+    "     'APROBADO' if goles_contra[-1]/len(jornadas) < 1.0 else 'MEJORAR'],\n",
     "    ['Diferencia de Goles', f'+{goles_favor[-1] - goles_contra[-1]}', '> +30', \n",
-    "     '✅' if (goles_favor[-1] - goles_contra[-1]) > 30 else '⚠️']\n",
+    "     'APROBADO' if (goles_favor[-1] - goles_contra[-1]) > 30 else 'MEJORAR']\n",
     "]\n",
     "\n",
     "# Dibujando tabla\n",
@@ -1121,10 +1122,10 @@
     "## Autoevaluación Semanal\n",
     "\n",
     "### Nivel de Comprensión (1-5)\n",
-    "- **Conceptos básicos de matplotlib**: ⭐⭐⭐⭐⭐\n",
-    "- **Creación de subplots complejos**: ⭐⭐⭐⭐⭐\n",
-    "- **Personalización avanzada**: ⭐⭐⭐⭐⭐\n",
-    "- **Interpretación de visualizaciones**: ⭐⭐⭐⭐⭐\n",
+    "- **Conceptos básicos de matplotlib**: Nivel 5\n",
+    "- **Creación de subplots complejos**: Nivel 5\n",
+    "- **Personalización avanzada**: Nivel 5\n",
+    "- **Interpretación de visualizaciones**: Nivel 5\n",
     "\n",
     "### Preguntas de Reflexión\n",
     "1. **¿Qué tipo de gráfico es más efectivo para mostrar evolución temporal?**\n",
